Remove warning in SpringIDE